Policies/Kubernetes/ecommerce-zero-trust.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spring-allow-all-egress
  namespace: ecommerce
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spring-allow-ingress-envoy-alloy
  namespace: ecommerce
spec:
  podSelector: {} 
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Allow traffic from Envoy Gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: envoy-gateway-system
    # Allow traffic from Alloy
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: alloy
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 9091
---
#Default Deny except same namespace pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: ecommerce
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
