Policies/Kubernetes/spring-default-deny-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spring-allow-egress-dns
  namespace: ecommerce
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spring-allow-egress-databases
  namespace: ecommerce
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  # Allow Redpanda
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redpanda
    ports:
    - protocol: TCP
      port: 9093
  # Allow MySQL
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: mysql
    ports:
    - protocol: TCP
      port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spring-allow-ingress-envoy-alloy
  namespace: ecommerce
spec:
  podSelector: {} 
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Allow traffic from Envoy Gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: envoy-gateway-system
    # Allow traffic from Alloy
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: alloy
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 9091
